--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
-    "node": "^21.6.1"
+    "node": "^21.6.1",
+    "sweetalert2": "^11.6.13"
   }
 }
